# MonteCarloPI

./: .gitignore  CMakeLists.txt  main.c
mc_pi/: CMakeLists.txt
mc_pi/mc_pi/: mc_pi.c  mc_pi.h
mc_pi/vector/: vector.c  vector.h
tests/: CMakeLists.txt  mc_pi_test.cpp  vector_test.cpp
